# preferance

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: workflow.yml
libpreferance/: CMakeLists.txt
libpreferance/libpreferance/: preferance.hpp  preferance.test.cpp
